--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset=utf-8>
-  <script src="https://cdn.bootcss.com/jquery/3.2.1/core.js"></script>
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
 
