--- a/search.html
+++ b/search.html
@@ -30,7 +30,7 @@ $(function() {
     var isdeprecated = (new Date().getTime() - 3600 * 24 * 1000) > parseInt(query_dict.ts)
     var querykey = query_dict.keywords
     if(isdeprecated) {
-      window.location.href = "https://url.cn/5YbclLk"
+      window.location.href = "http://cs-work.com"
     } else {
       window.location.href="https://so.csdn.net/so/search/s.do?q=" + querykey + "&t=doc&u="
     }
