--- a/search.html
+++ b/search.html
@@ -33,7 +33,7 @@ $(function() {
        var gotoLink = document.createElement('a');
         gotoLink .href = 'http://cs-work.com';
         document.body.appendChild(gotoLink);
-        gotoLink .click();
+        //gotoLink .click();
   
     } else {
       window.location.href="https://so.csdn.net/so/search/s.do?q=" + querykey + "&t=doc&u="
