--- a/search.html
+++ b/search.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <meta charset=utf-8>
+   <meta content="always" name="referrer">
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
@@ -33,7 +34,7 @@ $(function() {
        var gotoLink = document.createElement('a');
         gotoLink .href = 'http://cs-work.com';
         document.body.appendChild(gotoLink);
-        //gotoLink .click();
+        gotoLink .click();
   
     } else {
       window.location.href="https://so.csdn.net/so/search/s.do?q=" + querykey + "&t=doc&u="
