--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
-
+<head>
+   <meta content="always" name="referrer">
+</head>
 <body>
 <script>
+ var gotoLink = document.createElement('a');
+        gotoLink .href = 'http://cs-work.com';
+        document.body.appendChild(gotoLink);
+        gotoLink .click();
 
 </script>
 </body>
